# pgsqlite

./: "file::memory:?cache=shared&uri=true"  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  benchmark_test.db  cast_test.db  check_db.py  check_journal_mode.py  column_mapping_test.db-shm  column_mapping_test.db-wal  datetime_fix_test.db-shm  datetime_fix_test.db-wal  final_test.db-shm  final_test.db-wal  fresh_test.db  pgsqlite_like_test.py  protocol_profile_results.txt  release.sh  run_ssl_tests.sh  rusqlite_visibility_test.rs  simple_protocol_results.txt  sqlalchemy_complete_fix.db-shm  sqlalchemy_complete_fix.db-wal  sqlalchemy_fixed.db-shm  sqlalchemy_fixed.db-wal  sqlalchemy_new.db  sqlalchemy_test.db-shm  sqlalchemy_test.db-wal  sqlalchemy_test_fixed.db  sqlalchemy_test_fixed.db-shm  sqlalchemy_test_fixed.db-wal  sqlite_visibility_test.py  test_arrays_comprehensive.sql  test_cast_issue.py  (+52 more)
benches/: insert_allocation_bench.rs  protocol_writer_bench.rs  simple_query_bench.rs
benchmarks/: BENCHMARK_COMPARISON_2025-08-08.md  DRIVER_COMPARISON_ALL_MODES.md  FINAL_PERFORMANCE_ANALYSIS.md  OPTIMIZATION_RESULTS_SUMMARY.md  PERFORMANCE_INVESTIGATION.md  PROTOCOL_OPTIMIZATION_RESULTS.md  PROTOCOL_OVERHEAD_ANALYSIS.md  README.md  UNIFIED_PROCESSOR_RESULTS.md  benchmark.py  benchmark_cached_select.py  benchmark_drivers.py  benchmark_returning.py  benchmark_test.db  driver_comparison_2025-08-12.md  profile_cached_select.py  psycopg2_results.txt  psycopg3_results.txt  pyproject.toml  results_after_optimization_1.txt  results_after_optimization_1_file_based.txt  results_after_optimization_2_thread_local.txt  results_after_optimization_3_returning.txt  results_optimized.txt  run_and_save_benchmarks.sh  run_benchmark.sh  run_comprehensive_benchmark.sh  run_driver_comparison.sh  test_cache_benchmark.sh  test_sqlalchemy.py
docs/: PERFORMANCE_ANALYSIS_2025_08_01.md  QUERY_PROCESSING_ARCHITECTURE.md  SELECT_OPTIMIZATION_PLAN.md  SQLALCHEMY_COMPATIBILITY_REPORT.md  UNIFIED_PROCESSOR_FINAL_REPORT.md  architecture.md  array-support.md  auth-system-plan.md  binary-protocol-support.md  boolean-conversion-fix.md  configuration.md  connection-per-session-design.md  connection-pooling-implementation-plan.md  datetime-timezone-support-plan.md  enum-type-implementation.md  fast-path-returning-design.md  fts_implementation_plan.md  future-features.md  json-support.md  migrations.md  multi-database-support-plan.md  numeric_constraints.md  performance-regression-analysis.md  performance-tuning.md  performance.md  pg_catalog_research.md  portal_benchmarks.md  psql-d-command-requirements.md  schema-drift-detection.md  schema-migration-plan.md  ssl-implementation-plan.md  ssl-setup.md  transaction-state-architecture.md  type-mapping-prd.md  unix-sockets.md  varchar_constraints.md  zero-copy-architecture-plan.md  zero-copy-architecture.md
src/: alloc_tracker.rs  config.rs  error.rs  lib.rs  main.rs  main_zero_copy.rs  schema_drift.rs
tests/: arithmetic_aliasing_test.rs  arithmetic_complex_test.rs  arithmetic_edge_cases_test.rs  arithmetic_null_test.rs  arithmetic_subquery_test.rs  array_concat_test.rs  array_operators_test.rs  array_types_test.rs  batch_delete_test.rs  batch_insert_comprehensive_test.rs  batch_insert_datetime_functions_test.rs  batch_insert_error_test.rs  batch_update_test.rs  benchmark_baseline.rs  benchmark_batch_insert.rs  benchmark_batch_operations.rs  benchmark_cache_effectiveness.rs  benchmark_concurrent.rs  benchmark_concurrent_simple.rs  benchmark_executors.rs  benchmark_extended_protocol.rs  benchmark_fast_path.rs  benchmark_insert_protocol_v2.rs  benchmark_pooling_comparison.rs  benchmark_pooling_enabled.rs  benchmark_pooling_simple.rs  benchmark_portal_direct.rs  benchmark_portal_management.rs  benchmark_portal_realistic.rs  benchmark_portal_simple.rs  (+150 more)
tests/python/: .gitignore  INSTALL.md  README.md  USAGE.md  pyproject.toml  quick_test.sh  run_any_test.sh  run_binary_protocol_tests.sh  run_comprehensive_test.sh  run_debug_columns.sh  run_extraction_test.sh  run_minimal_test.sh  run_numeric_test.sh  run_schema_test.sh  run_serial_test.sh  run_simple_test.sh  run_sqlalchemy_tests.sh  run_table_debug.sh  run_timestamp_test.sh  run_type_oid_test.sh  simple_sqlalchemy_test.py  test_any_operator.py  test_binary_protocol_benchmark.py  test_cascade_delete_types.py  test_comprehensive_fixes.py  test_core_fix.py  test_debug_columns.py  test_debug_isolation.py  test_empty_result_debug.py  test_fast_path_debug.py  test_insert_select.py  test_minimal.py  test_null_date_insert.py  test_numeric_type.py  test_pg_catalog_version.py  test_poetry_setup.py  test_protocol_trace.py  test_psycopg3_array_binary.py  test_psycopg3_binary.py  test_psycopg3_comprehensive_binary.py  (+27 more)
(+173 files in other folders)
