[tool.poetry]
name = "pgsqlite-benchmarks"
version = "0.1.0"
description = "Performance benchmarks comparing SQLite direct access vs PostgreSQL client via pgsqlite"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9"
psycopg = "^3.1"
tabulate = "^0.9"
colorama = "^0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"